--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -160,7 +160,7 @@ h1:hover .anchor-link-img, h2:hover .anchor-link-img, h3:hover .anchor-link-img,
 }
 
 // Book titles in paragraphs
-.book-title {
+.book-title, .short-story-title {
   font-style: italic;
 }
 
