--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -211,4 +211,9 @@ h1:hover .anchor-link-img, h2:hover .anchor-link-img, h3:hover .anchor-link-img,
   font-size: $footnote-font-size;
   column-count: 2;
   padding: 0;
+  
+  li {
+    // Don't allow long entries to be split across columns
+    break-inside: avoid-column;
+  }
 }
