--- a/_includes/series_link.html
+++ b/_includes/series_link.html
@@ -7,18 +7,26 @@ Otherwise it doens't work inside footnotes.
 See:
 https://stackoverflow.com/questions/50467557/jekyll-on-github-pages-how-to-include-external-content-inside-footnotes
 {% endcomment -%}
+
+{%- assign target_series = include.series | replace: newline,' ' | downcase | strip -%}
+
+{%- comment -%}Assign link_text here incase we don't find a link.
+{%- endcomment -%}
+{%- assign link_text = include.seires | replace: newline, ' ' | strip -%}
+
 {%- assign url = null -%}
 
 {%- comment %}Try to find the series and set a URL{% endcomment -%}
 {%- for page in site.pages -%}
   {%- if page.series_name == include.series and page.layout == "series_page" -%}
     {%- assign url = page.url -%}
+    {%- assign link_text = page.series_name | replace: newline, ' ' | strip -%}
     {%- break -%}
   {%- endif -%}
 {%- endfor -%}
 
 {%- comment %}Wrap the name in <span> tags.{% endcomment -%}
-{%- capture wrapped_name -%}<span class="book-series">{{ include.series }}</span>{%- endcapture -%}
+{%- capture wrapped_name -%}<span class="book-series">{{ link_text }}</span>{%- endcapture -%}
 
 {%- comment %}Wrap again with a link if we find one.{% endcomment -%}
 {%- if url and page.url != url -%}
