Add newline capture to series_link.html
Lack of this was causing the weird spacing reported in #72.

This fixes #72.

--- a/_includes/series_link.html
+++ b/_includes/series_link.html
@@ -8,6 +8,9 @@ See:
 https://stackoverflow.com/questions/50467557/jekyll-on-github-pages-how-to-include-external-content-inside-footnotes
 {% endcomment -%}
 
+{%- capture newline %}
+{% endcapture -%}
+
 {%- assign target_series = include.series | replace: newline,' ' | downcase | strip -%}
 
 {%- comment -%}Assign link_text here incase we don't find a link.
