--- a/_layouts/author_page.html
+++ b/_layouts/author_page.html
@@ -41,14 +41,7 @@ have to test if they exist though first to make our header logic easier.{% endco
 
       {% endif %}
 
-      {% include book_card.html
-        url=book.url
-        image=book.image
-        title=book.title
-        author=book.book_author
-        rating=book.rating
-        description=book.excerpt
-      %}
+      {% include auto_book_card.html title=book.title %}
 
     {% endif %}
   {% endif %}
@@ -81,14 +74,7 @@ headlines, but not before the first headline.{% endcomment %}
     {% assign series = book.series %}
     {% if sort_series == series %}
 
-      {% include book_card.html
-        url=book.url
-        image=book.image
-        title=book.title
-        author=book.book_author
-        rating=book.rating
-        description=book.excerpt
-      %}
+      {% include auto_book_card.html title=book.title %}
 
     {% endif %}
   {% endfor %}
