--- a/_layouts/series_page.html
+++ b/_layouts/series_page.html
@@ -15,14 +15,7 @@ layout: default
 {% for book in sorted_books %}
   {% if book.series == page.title %}
 
-    {% include book_card.html
-      url=book.url
-      image=book.image
-      title=book.title
-      author=book.book_author
-      rating=book.rating
-      description=book.excerpt
-    %}
+    {% include auto_book_card.html title=book.title %}
 
   {% endif %}
 {% endfor %}
