Fist bug in post_time
And use `assign` instead of `capture`. Use `plus: 0` to convert to int.

This fixes #75

--- a/_includes/related_books.html
+++ b/_includes/related_books.html
@@ -6,7 +6,7 @@ category or not.
 {% assign max_books = 3 %}
 {% assign placed_books = '' | split: '' %}
 
-{%- capture now_unix %}{{'now' | date: '%s'}}{% endcapture -%}
+{%- assign now_unix = 'now' | date: '%s' | plus: 0 -%}
 
 {% comment %} Store the two h2 snippets to variables {% endcomment %}
 
@@ -43,7 +43,7 @@ category or not.
         {% if book.series == page.series %}
 
           {% comment %}Don't place posts from the future.{% endcomment %}
-          {% capture post_time %}{{ book.date | date: '%s'}}{% endcapture %}
+          {% assign post_time = book.date | date: '%s' | plus: 0 %}
           {% if post_time > now_unix %}
             {% continue %}
           {% endif %}
@@ -88,7 +88,7 @@ category or not.
         {% if book.book_author == page.book_author %}
 
           {% comment %}Don't place posts from the future.{% endcomment %}
-          {% capture post_time %}{{ book.date | date: '%s'}}{% endcapture %}
+          {% assign post_time = book.date | date: '%s' | plus: 0 %}
           {% if post_time > now_unix %}
             {% continue %}
           {% endif %}
@@ -138,7 +138,7 @@ category or not.
       {% if placed_books.size < max_books %}
 
         {% comment %}Don't place posts from the future.{% endcomment %}
-        {% capture post_time %}{{ book.date | date: '%s'}}{% endcapture %}
+        {% assign post_time = book.date | date: '%s' | plus: 0 %}
         {% if post_time > now_unix %}
           {% continue %}
         {% endif %}
