--- a/_includes/auto_book_card.html
+++ b/_includes/auto_book_card.html
@@ -4,18 +4,18 @@ to add them by hand to articles (for example in the yearly review post).{% endco
 {%- capture newline %}
 {% endcapture -%}
 
-{%- capture now_unix %}{{'now' | date: '%s'}}{% endcapture -%}
+{%- assign now_unix = 'now' | date: '%s' | plus: 0 -%}
 
 {% assign target_title = include.title | replace: newline,' ' | downcase | strip %}
 
 {% for book in site.books %}
   {% assign potential_title = book.title | replace: newline,' ' | downcase | strip %}
-  {% capture post_time %}{{ book.date | date: '%s'}}{% endcapture %}
+  {% assign post_time = book.date | date: '%s' | plus: 0 %}
 
   {% if potential_title != target_title %}
     {% comment %}No match, so keep looking{% endcomment %}
     {% continue %}
-  {% elsif posttime > now_unix %}
+  {% elsif post_time > now_unix %}
     {% comment %}Don't get unpublished posts from the future{% endcomment %}
     {% continue %}
   {% else %}
