--- a/_layouts/author_page.html
+++ b/_layouts/author_page.html
@@ -41,7 +41,7 @@ have to test if they exist though first to make our header logic easier.{% endco
 
       {% endif %}
 
-      {% include auto_book_card.html title=book.title %}
+      {% include auto_book_card_from_object.html book=book %}
 
     {% endif %}
   {% endif %}
@@ -74,7 +74,7 @@ headlines, but not before the first headline.{% endcomment %}
     {% assign series = book.series %}
     {% if sort_series == series %}
 
-      {% include auto_book_card.html title=book.title %}
+      {% include auto_book_card_from_object.html book=book %}
 
     {% endif %}
   {% endfor %}
