--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -217,3 +217,11 @@ h1:hover .anchor-link-img, h2:hover .anchor-link-img, h3:hover .anchor-link-img,
     break-inside: avoid-column;
   }
 }
+
+// OMEMO QR Code Images
+.omemo-qr-code {
+    width: 200px;
+    height: auto;
+    max-width: 100%;
+    border: None;
+}
