--- a/_includes/books_topbar.html
+++ b/_includes/books_topbar.html
@@ -6,6 +6,8 @@
 
     {% assign sorted_nodes = site.pages | sort: "title" %}
 
+    Sort by:
+
     {% for node in sorted_nodes %}
       {% if node.short_title != null
         and node.book_topbar_include == true
